# geogame

./: .gitignore  README.md  pyproject.toml
db/: geogame.sql  setup-db.sh
game/: __init__.py  __main__.py  cli.py  config.py  config.toml  db.py  evaluate.py  question.py  recorder.py
