[project]
name = "geogame"
version = "0.1.0"
description = "A CLI quiz game to train your geographic knowledge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "pymysql",
    "rich",
    "toml"
]

[project.scripts]
geogame = "game.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
game = ["config.toml"]

[tool.setuptools.packages.find]
include = ["game"]

